# icu

./: .gitignore  .icu-policy.yml  .pre-commit-hooks.yaml  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml  starting archetecuture.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  scrape.yml
fixtures/clean/: normal_skill.md  normal_tool.py  safe_mcp_config.json
fixtures/malicious/: exfiltration_mcp_config.json  hidden_unicode.txt  obfuscated_payload.py  prompt_injection_skill.md
landing/: .gitignore  eslint.config.mjs  package-lock.json  package.json
landing/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  twitter-image.tsx
landing/app/about/: page.tsx
landing/app/api-docs/: page.tsx
landing/app/authors/: page.tsx
landing/app/cli/: page.tsx
landing/app/marketplaces/: page.tsx
landing/lib/: constants.ts  db.ts  utils.ts
landing/prisma/: schema.prisma  seed.ts
landing/scripts/: migrate-fix-categories.ts  migrate-reconfidence.ts  scrape.ts
src/icu/: __main__.py  config.py
tests/: conftest.py  test_config.py
tests/test_analyzer/: test_deobfuscator.py  test_entropy.py  test_heuristics.py  test_patterns.py  test_scanner.py
tests/test_cli/: test_commands.py  test_policy_commands.py  test_reputation_commands.py  test_summary.py  test_watch.py
tests/test_integrations/: test_hooks.py
tests/test_mcp/: conftest.py  test_tools.py
tests/test_policy/: test_engine.py  test_loader.py  test_models.py
tests/test_reputation/: test_database.py  test_dynamic_rules.py
tests/test_runtime/: test_watcher.py
(+83 files in other folders)
