[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icu"
version = "0.1.0"
description = "AI supply chain firewall — scan files for prompt injection, data exfiltration, and obfuscated payloads"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.6",
    "types-PyYAML>=6.0",
    "mcp[cli]>=1.2",
]
mcp = [
    "mcp[cli]>=1.2",
]

[project.scripts]
icu = "icu.cli.main:cli"
icu-mcp = "icu.mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/icu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true
